Finished styling page with css mainly using flexbox

--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="part-one">
+                <div class="part-one-total">
                     <div class="part-one-title">Some random information</div>
                     <div class="part-one-pictures">
                         <div class="pic-info">
                             <img src="weight-one.jpg" alt="Woman about to deadlift" class="weight-img">
-                            <div>this is some subtext under an illustration or image</div>
+                            <div class="pic-text">this is some subtext under an illustration or image</div>
                         </div>
                         <div class="pic-info">
                             <img src="weight-two.jpg" alt="Man performing a clean jerk lift" class="weight-img">
-                            <div>this is some subtext under an illustration or image</div>
+                            <div class="pic-text">this is some subtext under an illustration or image</div>
                         </div>
                         <div class="pic-info">
                             <img src="weight-three.jpg" alt="Man about to sumo deadlift" class="weight-img">
-                            <div>this is some subtext under an illustration or image</div>
+                            <div class="pic-text">this is some subtext under an illustration or image</div>
                         </div>
                         <div class="pic-info">
                             <img src="weight-four.jpg" alt="Man performing a deadlift" class="weight-img">
-                            <div>this is some subtext under an illustration or image</div>
+                            <div class="pic-text">this is some subtext under an illustration or image</div>
                         </div>
                     </div>
                 </div>
